<resources>
    <string name="app_name">MovieWatcherApp</string>
    <string name="title">MovieTitle</string>
    <string name="original_title">Original Title</string>
    <string name="original_release_date">Release Year</string>
    <string name="textViewDescription">Here is Detailed Description</string>
    <string name="favourite_fragment">Here is your list of favourite movies</string>
    <string name="rated_fragment">High Rated Movies are here</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_rated">High Rated</string>
    <string name="action_home">На главную</string>
    <string name="favorite">Favourite</string>
    <string name="main">Main</string>
    <string name="rated">High Rated</string>
    <string name="reload">Reload</string>
    <string name="error">Error</string>
    <string name="genre">Genre</string>
</resources>