<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_8"
            android:padding="@dimen/padding"
            android:text="@string/title"
            android:textSize="@dimen/text_size_35"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewOriginalTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/original_title"
            android:textSize="@dimen/text_size_28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <TextView
            android:id="@+id/textViewReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/original_release_date"
            android:textSize="@dimen/release_date_size"
            app:layout_constraintBottom_toTopOf="@+id/textViewDescriptionOfMovie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewPoster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.283" />

        <TextView
            android:id="@+id/textViewDescriptionOfMovie"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/padding"
            android:text="@string/textViewDescription"
            android:textSize="@dimen/original_title_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPoster" />

        <TextView
            android:id="@+id/textViewGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/genre"
            android:textSize="@dimen/release_date_size"
            app:layout_constraintBottom_toTopOf="@+id/textViewDescriptionOfMovie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewPoster"
            app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="336dp"
            android:layout_height="532dp"
            android:scaleType="centerCrop"
            android:src="@drawable/totoro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>